# WhileCompiler

./: .cproject  .project  CMakeLists.txt  README.md  use.md
example/: array.while
lib/: lib.c
src/: main.cpp
src/compile/: Bytecode.cpp  Bytecode.h
src/io/: Directory.cpp  Directory.h  Lexer.cpp  Lexer.h  OpParser.h  Parser.cpp  Parser.h  ParserAttr.h  Pipe.cpp  Pipe.h  Token.cpp  Token.h
src/java/: Bytecode.cpp  Bytecode.h  Classfile.cpp  Classfile.h  ClassfileWriter.cpp  ClassfileWriter.h  Constant.cpp  Constant.h  ConstantPool.cpp  ConstantPool.h  JavaFunction.cpp  JavaFunction.h  JavaInstruction.cpp  JavaInstruction.h  JavaObject.cpp  JavaObject.h  JavaProgram.cpp  JavaProgram.h  JavaReference.cpp  JavaReference.h  JavaStack.cpp  JavaStack.h  WhileToJava.cpp  WhileToJava.h
src/lang/: Common.h  Expr.cpp  Expr.h  Func.cpp  Func.h  Program.cpp  Program.h  Stmt.cpp  Stmt.h  SyntaxElem.h  SyntaxVisitor.h  Type.cpp  Type.h  TypeIntf.h  Value.cpp  Value.h  ValueIntf.h  Var.cpp  Var.h
src/test/: InterfaceTest.cpp  InterfaceTest.h  Test.cpp  Test.h
src/utils/: FlowGraph.cpp  FlowGraph.h  FlowNode.cpp  FlowNode.h  Interpreter.cpp  Interpreter.h  Interpreter.h.save  TypeChecker.cpp  TypeChecker.h
src/x86/: WhileObject.cpp  WhileObject.h  WhileToX86.cpp  WhileToX86.h  X86Function.cpp  X86Function.h  X86Instruction.cpp  X86Instruction.h  X86Program.cpp  X86Program.h  X86Reference.cpp  X86Reference.h  X86Register.cpp  X86Register.h  X86StackFrame.cpp  X86StackFrame.h  X86Writer.cpp  X86Writer.h
